manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: ksweightapp 
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ksweightapp
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ksweightapp 
    spec:
      containers:
        - name: ksweightapp 
          image: weightappbenk8s.azurecr.io/ksweightapp
          ports:
          - containerPort: 80
