manifests/service.yml
kind: Service
apiVersion: v1
metadata:
  name: ksweightapp
spec:
  selector:
    app: ksweightapp
  ports:
    - port: 5678 # Default port for image
      targetPort: 80
